[package]
name = "thumbnailed"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["caching", "image-thumbnails", "explorer"]
repository = "https://github.com/RedPixlFox/thumbnailed.git"
homepage = "https://github.com/RedPixlFox"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.26.2", features = ["default", "__screenshot"] }
log = "0.4"
egui_extras = { version = "0.26.2", features = ["all_loaders"] }
env_logger = { version = "0.11.3" }
image = { version = "0.25.0" }
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
hashbrown = "0.14.3"
# fastrand = "2.0.1"

[profile.release]
opt-level = 2
panic = 'unwind'

[profile.dev.package."*"]
opt-level = 2
